src/components/styles/Showcases.module.css
.showcaseCard {
  background-color: #F9F9F9;
  border-radius: 0;
  overflow: hidden;
  transition: transform 0.3s ease-out;
  transform: translate3d(0, 0, 0);
  will-change: transform, opacity;
  position: relative;
  margin-bottom: 5px;
  height: 80vh;
  flex: 1;
}

.showcaseCard:hover {
  transform: translateY(-5px);
}

.cardStackContainer {
  position: relative;
  min-height: 500px;
  width: 100%;
  overflow: visible;
  z-index: 40;
}

@media (max-width: 599px) {
  .hideOnMobile {
    display: none !important;
  }
} 

@media (max-width: 768px) {
  .showcaseCard {
    padding: 1rem;
    height: 80vh; /* Keep the height consistent on mobile */
  }

  .cardStackContainer {
    min-height: 450px;
  }
  
  .bodyScrollLocked {
    touch-action: none;
    overscroll-behavior: none;
  }
}

@media (max-width: 480px) {
  .cardStackContainer {
    min-height: 400px;
  }
}

